Ritual modifiers.